Fix issue where right side of the calendar was bleeding over the right side of the window.

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -27,6 +27,7 @@
   width: 100%;
   margin: 0 auto;
   padding: 20px;
+  box-sizing: border-box;
 }
 
 .loading,
